--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,8 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
-
+springdoc:
+  default-produces-media-type: application/json
 
 logging:
   level:
